--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular": "^1.2.29",
     "angular-strap": "^2.3.9",
     "bootstrap": "^3.3.7",
+    "es6-promise": "^4.0.4",
     "isomorphic-fetch": "^2.2.1",
     "ng-redux": "^3.4.0-beta.1",
     "redux": "^3.6.0",
